--- a/xiliu-common/pom.xml
+++ b/xiliu-common/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.java.xiliu</groupId>
-        <artifactId>yz-tenant</artifactId>
+        <artifactId>xiliu-lease-tenant</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
